2009-08-05  Jackson Harper  <jackson@ximian.com>

	* XamlReader.cs: Use the EntryAssembly when creating a managed
	xaml loader.

2009-07-20  Chris Toshok  <toshok@ximian.com>

	* XamlReader.cs: pass null for resourceBase in Load and
	LoadWithTemplateValidation.

2009-07-13  Jackson Harper  <jackson@ximian.com>

	* XamlParseException.cs: Add an internal error code
	field/property/constructor.

2009-07-02  Jeffrey Stedfast  <fejj@novell.com>

	* XmlLanguage.cs (GetLanguage): Validate the eitfLanguageTag
	string and throw ArgumentExceptions if they are badly formatted.

2009-06-30  Jackson Harper  <jackson@ximian.com>

	* XamlReader.cs: Implement LoadWithInitialTemplateValidation

2009-06-08  Jackson Harper  <jackson@ximian.com>

	* XamlParseException.cs: Remove line/position info from the
	exception method.

2009-04-30  Jackson Harper  <jackson@ximian.com>

	* XamlReader.cs: loaded objects should be created in a discrete
	namescope.

2009-04-09  Jackson Harper  <jackson@ximian.com>

	* XamlReader.cs: Updated method name.

2009-02-04  Jackson Harper  <jackson@ximian.com>

	* XamlReader.cs: Use the calling assembly as the loader assembly.

2009-01-26  Geoff Norton  <gnorton@novell.com>

	* XamlReader.cs: Surface lives in Deployment now.

2009-01-21  Sebastien Pouliot  <sebastien@ximian.com>

	* XmlLanguage.cs: Null is an invalid value. All strings needs to 
	be converted to lower case. Removed SecuritySafeCritical

2008-12-22  Sebastien Pouliot  <sebastien@ximian.com>

	* XamlReader.cs: Match SL2 when null or String.Empty is used as 
	arguments for Load.

2008-11-19  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* XamlReader.cs: Added InputMethod, ICommand,
	  HostingRenderTargetBitmap. Corcompare fixes.

2008-10-30  Jb Evain  <jbevain@novell.com>

	* XmlnsPrefixAttribute.cs: add.

2008-08-14  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* XmlnsDefinitionAttribute.cs, XmlLanguage.cs: Gui-compare fixes.
